--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Scratcher Tech</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Conference Elegant - Pingendo template</title>
+  <meta name="description" content="Free Bootstrap 4 Pingendo Elegant template for unique events.">
+  <meta name="keywords" content="Pingendo conference event elegant free template bootstrap 4">
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="elegant.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
@@ -28,65 +28,130 @@
           <li class="nav-item mx-2">
             <a class="nav-link" href="#">Home</a>
           </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#speakers">Grobat NFTs</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#schedule">Ninja Lounge NFTz</a>
-          </li>
         </ul>
-        <a class="btn navbar-btn mx-2 text-white btn-outline-light" href="#register">Stats</a>
       </div>
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover" style="	background-image: url(assets/BGs/contract-tech1.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="d-flex align-items-center py-5 photo-overlay cover" style="background-image: url(&quot;assets/BGs/contract-tech1.jpg&quot;); background-position: left top; background-size: 100%; background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="text-white p-5 bg-dark-opaque col-12 col-lg-8 mx-auto">
-          <h1 class="display-3">Batcode Scratcher Technology</h1>
-          <div class="text-white p-5 bg-dark-opaque col-12 col-lg-12 mx-auto">
-            <h1 class="mb-3">Scratcher Stats<br></h1>
+        <div class="col-md-12">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="nftmint p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
+            <button id="connectWallet" class="btn btn-dark shadowed rounded-0">Connect wallet</button>
+            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
+            <div class="nftminting" style="display: none;">
+              <div class="row">
+                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                  <div class="p-3 col-md-12" style="" data-pingendo-transient="">
+                    <div class="card">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                        <h4>Ninja NFT Minter</h4>
+                        <p>Input the number of NFTs you would like to mint, then click the mint button</p>
+                        <input id="mintAmount" type="number" max="10" min="1" step="1" value="1"><br>
+                        <button id="mint" class="btn btn-dark shadowed rounded-0">Mint</button>
+                        <div class="bnbvalue">
+                          <p class="bnbval"></p>
+                        </div>
+                        <div class="stats">
+                          <p class="minted"><span id="mintedamount">0</span>/<span id="max">1000</span></p>
+                        </div>
+                        <div class="walletStats">
+                          <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
+                          <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
+                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
+                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect reflections in BNB</button>
+                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true" style="display: none;">Collect reflections in Guest Token</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                  <div class="p-3 col-md-12 align-items-center" style="">
+                    <div class="card">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                        <h4>NFT Rewards Utility</h4>
+                        <div class="RewardHolders p-2">
+                          <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
+                            <input id="holderRewardAmount" type="number" min="1" max="50" value="1"></p>
+                          <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
+                            <input id="bnbRewardAmount" type="number" min="0.01" step="0.01"></p>
+                          <p class="rewardtoken"><span>Input Token to Reward</span>
+                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <a href="#register" class="btn btn-lg mt-4 btn-primary">Click this BUTTON</a>
+        </div>
+        <div class="col-md-6">
+          <div class="nftmint p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
+            <button id="connectWallet" class="btn btn-dark shadowed rounded-0">Stats<br></button>
+            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
+            <div class="nftminting" style="display: none;">
+              <div class="row">
+                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                  <div class="p-3 col-md-12" style="" data-pingendo-transient="">
+                    <div class="card">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                        <h4>Ninja NFT Minter</h4>
+                        <p>Input the number of NFTs you would like to mint, then click the mint button</p>
+                        <input id="mintAmount" type="number" max="10" min="1" step="1" value="1"><br>
+                        <button id="mint" class="btn btn-dark shadowed rounded-0">Mint</button>
+                        <div class="bnbvalue">
+                          <p class="bnbval"></p>
+                        </div>
+                        <div class="stats">
+                          <p class="minted"><span id="mintedamount">0</span>/<span id="max">1000</span></p>
+                        </div>
+                        <div class="walletStats">
+                          <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
+                          <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
+                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
+                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect reflections in BNB</button>
+                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true" style="display: none;">Collect reflections in Guest Token</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                  <div class="p-3 col-md-12 align-items-center" style="">
+                    <div class="card">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                        <h4>NFT Rewards Utility</h4>
+                        <div class="RewardHolders p-2">
+                          <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
+                            <input id="holderRewardAmount" type="number" min="1" max="50" value="1"></p>
+                          <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
+                            <input id="bnbRewardAmount" type="number" min="0.01" step="0.01"></p>
+                          <p class="rewardtoken"><span>Input Token to Reward</span>
+                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <!-- Intro -->
-  <div class="py-5">
-    <div class="container my-5">
-      <div class="row mx-auto">
-        <div class="col-md-12">
-          <h1 class="mb-3">Whitelabel the Batcode Scratch Tech in your Lounge or Project Group</h1>
-          <a href="#schedule" class="btn m-2 btn-outline-light">Contact Batman</a>
-          <a class="btn btn-primary m-2" href="#register">Sign up here</a>
-        </div>
-      </div>
-    </div>
-  </div>
   <!-- Speakers -->
   <!-- Schedule -->
   <!-- Sponsor logos -->
-  <div class="py-5 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="mb-4">Whitelabel Ecosystem</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-6">
-          <img class="center-block img-fluid d-block mx-auto" src="assets/imgs/grobat-logo.png" width="180"> </div>
-        <div class="col-md-4 col-6">
-          <img class="center-block img-fluid d-block mx-auto" src="assets/imgs/white-ninja.png" width="140"> </div>
-        <div class="col-md-4 col-6">
-          <img class="center-block img-fluid d-block mx-auto" src="assets/imgs/btcbuldog.png" width="210"> </div>
-      </div>
-    </div>
-  </div>
   <!-- Call to action -->
-  <div class="py-5 section" id="register"></div>
   <!-- Footer -->
   <!-- JavaScript dependencies -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
