--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Home</a>
+            <h1>Scratcher Dashboard</h1>
           </li>
         </ul>
       </div>
