--- a/index.html
+++ b/index.html
@@ -50,16 +50,7 @@
                   <div class="p-3 col-md-12" style="" data-pingendo-transient="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>Ninja NFT Minter</h4>
-                        <p>Input the number of NFTs you would like to mint, then click the mint button</p>
-                        <input id="mintAmount" type="number" max="10" min="1" step="1" value="1"><br>
-                        <button id="mint" class="btn btn-dark shadowed rounded-0">Mint</button>
-                        <div class="bnbvalue">
-                          <p class="bnbval"></p>
-                        </div>
-                        <div class="stats">
-                          <p class="minted"><span id="mintedamount">0</span>/<span id="max">1000</span></p>
-                        </div>
+                        <h4>Scratcher Controls</h4>
                         <div class="walletStats">
                           <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
@@ -94,8 +85,6 @@
         </div>
         <div class="col-md-6">
           <div class="nftmint p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
-            <button id="connectWallet" class="btn btn-dark shadowed rounded-0">Stats<br></button>
-            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
