--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
-            <h1>Scratcher Dashboard</h1>
+            <h1>Scratcher Central Command</h1>
           </li>
         </ul>
       </div>
@@ -85,52 +85,7 @@
         </div>
         <div class="col-md-6">
           <div class="nftmint p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
-            <div class="nftminting" style="display: none;">
-              <div class="row">
-                <div class="col-md-4 col-4" style="	min-width: 369px;">
-                  <div class="p-3 col-md-12" style="" data-pingendo-transient="">
-                    <div class="card">
-                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>Ninja NFT Minter</h4>
-                        <p>Input the number of NFTs you would like to mint, then click the mint button</p>
-                        <input id="mintAmount" type="number" max="10" min="1" step="1" value="1"><br>
-                        <button id="mint" class="btn btn-dark shadowed rounded-0">Mint</button>
-                        <div class="bnbvalue">
-                          <p class="bnbval"></p>
-                        </div>
-                        <div class="stats">
-                          <p class="minted"><span id="mintedamount">0</span>/<span id="max">1000</span></p>
-                        </div>
-                        <div class="walletStats">
-                          <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
-                          <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
-                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
-                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect reflections in BNB</button>
-                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true" style="display: none;">Collect reflections in Guest Token</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4 col-4" style="	min-width: 369px;">
-                  <div class="p-3 col-md-12 align-items-center" style="">
-                    <div class="card">
-                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>NFT Rewards Utility</h4>
-                        <div class="RewardHolders p-2">
-                          <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
-                            <input id="holderRewardAmount" type="number" min="1" max="50" value="1"></p>
-                          <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
-                            <input id="bnbRewardAmount" type="number" min="0.01" step="0.01"></p>
-                          <p class="rewardtoken"><span>Input Token to Reward</span>
-                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+
           </div>
         </div>
       </div>
