--- a/index.html
+++ b/index.html
@@ -47,16 +47,19 @@
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
-                  <div class="p-3 col-md-12" style="" data-pingendo-transient="">
+                  <div class="p-3 col-md-12" style="">
                     <div class="card">
-                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                      <div class="card-body p-3"
+                        style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>Scratcher Controls</h4>
                         <div class="walletStats">
                           <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
                           <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
-                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect reflections in BNB</button>
-                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true" style="display: none;">Collect reflections in Guest Token</button>
+                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect
+                            reflections in BNB</button>
+                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true"
+                            style="display: none;">Collect reflections in Guest Token</button>
                         </div>
                       </div>
                     </div>
