--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
                           <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
                           <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
-                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0" onclick="collectreflects()">Collect
-                            reflections in BNB</button>
+                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0"
+                            onclick="collectreflects()">Collect reflections in BNB</button>
                           <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true"
                             style="display: none;">Collect reflections in Guest Token</button>
                         </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                       </div>
                     </div>
                   </div>
