--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <!-- CSS dependencies -->
+  <link rel="stylesheet" href="dash.css">
   <link rel="stylesheet" href="elegant.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    type="text/css">
   <!-- Script: Make my navbar transparent when the document is scrolled to top -->
   <script src="js/navbar-ontop.js"></script>
   <!-- Script: Animated entrance -->
@@ -22,7 +24,9 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md fixed-top bg-dark navbar-dark">
     <div class="container">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
@@ -33,17 +37,20 @@
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover" style="background-image: url(&quot;assets/BGs/contract-tech1.jpg&quot;); background-position: center; background-size: cover; background-repeat: no-repeat;">
+  <div class="d-flex align-items-center py-5 photo-overlay cover"
+    style="background-image: url(&quot;assets/BGs/contract-tech1.jpg&quot;); background-position: center; background-size: cover; background-repeat: no-repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
-          <div class="nftmint p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
+        <div class="col-md-12">
+          <div class="nftmint p-2"
+            style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <button id="connectWallet" class="btn btn-dark shadowed rounded-0">Connect wallet</button>
-            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0" style="display: none;">Disconnect</button>
+            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0"
+              style="display: none;">Disconnect</button>
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
@@ -55,11 +62,12 @@
                         <div class="walletStats">
                           <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
-                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span> BNB</p>
+                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span>
+                            BNB</p>
                           <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0"
                             onclick="collectreflects()">Collect reflections in BNB</button>
-                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0" disabled="true"
-                            style="display: none;">Collect reflections in Guest Token</button>
+                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0"
+                            disabled="true" style="display: none;">Collect reflections in Guest Token</button>
                         </div>
                       </div>
                     </div>
@@ -79,14 +87,11 @@
                             <input id="bnbRewardAmount" type="number" min="0.01" step="0.01">
                           </p>
                           <p class="rewardtoken"><span>Input Token to Reward</span>
-                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0"
-                              onclick="rewardHolders()">Reward Holders in Token</button>
+                            <input id="RewardToken" type="text"><br><button id="RewardHolders"
+                              class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in
+                              Token</button>
                           </p>
                         </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
                       </div>
                     </div>
                   </div>
@@ -95,12 +100,12 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="nftmint p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
-
-          </div>
-        </div>
       </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="nftmint p-2"
+      style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
     </div>
   </div>
   <!-- Intro -->
@@ -111,19 +116,23 @@
   <!-- Footer -->
   <!-- JavaScript dependencies -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
   <!-- Script: Smooth scrolling between anchors in a same page -->
   <script src="js/smooth-scroll.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"></script>
-    <script type="text/javascript" src="../js/notify.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/web3@1.2.11/dist/web3.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.7/dist/index.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
-    <script type="text/javascript"
-      src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"></script>
+  <script type="text/javascript" src="../js/notify.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/web3@1.2.11/dist/web3.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.7/dist/index.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
+  <script type="text/javascript"
+    src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
