--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Scratcher Central Command</title>
+  <title>Instawin Scratcher Central Command</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <!-- CSS dependencies -->
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
-            <h1>Scratcher Central Command</h1>
+            <h1>Instawin Scratcher Central Command</h1>
           </li>
         </ul>
       </div>
