--- a/index.html
+++ b/index.html
@@ -103,11 +103,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-    <div class="nftmint p-2"
-      style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
-    </div>
-  </div>
+  <div class="col-md-6"></div>
   <!-- Intro -->
   <!-- Speakers -->
   <!-- Schedule -->
