--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col-md-12">
           <div class="nftmint p-2"
             style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
-            <button id="connectWallet" class="btn btn-dark shadowed rounded-0">Connect wallet</button>
+            <button id="connectWallet" class="btn btn-dark shadowed rounded-0 btn-lg">Connect wallet</button>
             <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0"
               style="display: none;">Disconnect</button>
             <div class="nftminting" style="display: none;">
