--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="nftmint p-2"
+          <div class="p-2"
             style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <button id="connectWallet" class="btn btn-dark shadowed rounded-0 btn-lg">Connect wallet</button>
             <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0"
@@ -101,11 +101,9 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="nftmint p-2"
+          <div class=" p-2"
             style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
             <a class="btn btn-dark btn-lg" href="#">The Other Button</a>
-            <button id="disconnectWallet" class="btn btn-dark shadowed rounded-0"
-              style="display: none;">Disconnect</button>
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
@@ -113,17 +111,7 @@
                     <div class="card">
                       <div class="card-body p-3"
                         style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>Scratcher Controls</h4>
-                        <div class="walletStats">
-                          <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
-                          <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
-                          <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span>
-                            BNB</p>
-                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0"
-                            onclick="collectreflects()">Collect reflections in BNB</button>
-                          <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0"
-                            disabled="true" style="display: none;">Collect reflections in Guest Token</button>
-                        </div>
+                        <h4>The Other Button Stuff</h4>
                       </div>
                     </div>
                   </div>
@@ -134,19 +122,6 @@
                       <div class="card-body p-3"
                         style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
                         <h4>NFT Rewards Utility</h4>
-                        <div class="RewardHolders p-2">
-                          <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
-                            <input id="holderRewardAmount" type="number" min="1" max="50" value="1">
-                          </p>
-                          <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
-                            <input id="bnbRewardAmount" type="number" min="0.01" step="0.01">
-                          </p>
-                          <p class="rewardtoken"><span>Input Token to Reward</span>
-                            <input id="RewardToken" type="text"><br><button id="RewardHolders"
-                              class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in
-                              Token</button>
-                          </p>
-                        </div>
                       </div>
                     </div>
                   </div>
