--- a/index.html
+++ b/index.html
@@ -133,7 +133,16 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6"></div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center d-md-flex align-items-center">
+          <img class="img-fluid d-block rounded-circle" src="assets/imgs/grobat-logo.png" width="60">
+          <p class="mb-0 py-1">Grobat Technologies</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Intro -->
   <!-- Speakers -->
   <!-- Schedule -->
