--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
   <!-- Cover -->
   <div class="d-flex align-items-center py-5 photo-overlay cover"
-    style="background-image: url(&quot;assets/BGs/contract-tech1.jpg&quot;); background-position: center; background-size: cover; background-repeat: no-repeat;">
+    style="background-image: url(&quot;assets/BGs/ethereum-art.jpg&quot;); background-position: center; background-size: cover; background-repeat: no-repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
