--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
                           <p class="reflectionBalance">unclaimed reflections: <span class="numreflectbalance">0</span>
                             BNB</p>
-                          <button id="collectReflectsInBeans" class="btn btn-dark shadowed rounded-0"
+                          <button id="distributor" class="btn btn-dark shadowed rounded-0"
                             onclick="collectreflects()">Collect reflections in BNB</button>
                           <button id="collectReflectionsInGuestToken" class="btn btn-dark shadowed rounded-0"
                             disabled="true" style="display: none;">Collect reflections in Guest Token</button>
@@ -138,7 +138,7 @@
       <div class="row">
         <div class="col-md-12 text-center d-md-flex align-items-center">
           <img class="img-fluid d-block rounded-circle" src="assets/imgs/grobat-logo.png" width="60">
-          <p class="mb-0 py-1">Grobat Technologies</p>
+          <p class="mb-1 py-1">Grobat Technologies</p>
         </div>
       </div>
     </div>
