--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <script src="js/navbar-ontop.js"></script>
   <!-- Script: Animated entrance -->
   <script src="js/animate-in.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body class="text-center">
@@ -51,7 +54,7 @@
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>Scratcher Controls</h4>
+                        <h4>Wallet Stats</h4>
                         <div class="walletStats">
                           <p class="walletbalance">Your Balance: <span class="bnbBalanceVal">0</span> BNB</p>
                           <p class="nftOwned"><span class="numOwnedNft">0</span> Nfts Owned</p>
@@ -67,7 +70,7 @@
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>NFT Rewards Utility</h4>
+                        <h4>Rewards Utility</h4>
                         <div class="RewardHolders p-2">
                           <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
                             <input id="holderRewardAmount" type="number" min="1" max="50" value="1">
@@ -89,14 +92,14 @@
         </div>
         <div class="col-md-6">
           <div class=" p-2" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); background-position: left top; background-size: 100%; background-repeat: repeat;">
-            <a class="btn btn-dark btn-lg" href="#">The Other Button</a>
+            <a class="btn btn-dark btn-lg" href="#">Distribute Rewards</a>
             <div class="nftminting" style="display: none;">
               <div class="row">
                 <div class="col-md-4 col-4" style="	min-width: 369px;">
                   <div class="p-3 col-md-12" style="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>The Other Button Stuff</h4>
+                        <h4>Distributed Rewards</h4>
                       </div>
                     </div>
                   </div>
@@ -105,7 +108,7 @@
                   <div class="p-3 col-md-12 align-items-center" style="">
                     <div class="card">
                       <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-                        <h4>NFT Rewards Utility</h4>
+                        <h4>Stats</h4>
                       </div>
                     </div>
                   </div>
@@ -146,6 +149,7 @@
   <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
+  
 </body>
 
 </html>
