--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
-            <h1>Instawin Scratcher Central Command</h1>
+            <h1>NinjaTech Central Command</h1>
           </li>
         </ul>
       </div>
