--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
   <!-- Cover -->
-  <div class="d-flex align-items-center py-5 photo-overlay cover" style=" background-image: url(assets/BGs/ethereum-art.jpg); background-position: center;	background-size: cover;	background-repeat: no-repeat;">
+  <div class="d-flex align-items-center py-5 photo-overlay cover" style="	background-image: url(assets/BGs/BG1.jpg);	background-position: center;	background-size: cover;	background-repeat: no-repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
