--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-md-4 col-4" style="	min-width: 369px;">
+                  <div class="p-3 col-md-12 align-items-center" style="">
+                    <div class="card">
+                      <div class="card-body p-3" style="	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+                        <h4>NFT Rewards Utility</h4>
+                        <div class="RewardHolders p-2">
+                          <p class="holdersrewards"><span>NFT Holders to Reward</span><br>
+                            <input id="holderRewardAmount" type="number" min="1" max="50" value="1"></p>
+                          <p class="rewardamount"><span> Amount to Reward (BNB)</span><br>
+                            <input id="bnbRewardAmount" type="number" min="0.01" step="0.01"></p>
+                          <p class="rewardtoken"><span>Input Token to Reward</span>
+                            <input id="RewardToken" type="text"><br><button id="RewardHolders" class="btn btn-dark shadowed rounded-0" onclick="rewardHolders()">Reward Holders in Token</button></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
